# acuitybridge-safety-escalation-orchestrator

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
acuitybridge/: __init__.py  audit.py  config.py  crisis_router.py  escalation.py  models.py  rbac.py  signal_evaluator.py  transparency_report.py
docs/: 01_architecture.md  02_deployment.md  03_security_privacy.md  05_pilot_playbook.md  06_roadmap_milestones.md  07_limitations_and_disclaimers.md
examples/: partner_policies.yaml  synthetic_scenario.py
tests/: test_audit.py  test_config.py  test_crisis_router.py  test_escalation.py  test_rbac.py  test_signal_evaluator.py  test_transparency_report.py
